--- a/asset/index.html
+++ b/asset/index.html
@@ -10,12 +10,13 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body>
-    <div class="antialiased bg-black w-full min-h-screen text-slate-300 relative py-4">
-        <div class="grid grid-cols-12 mx-auto gap-2 sm:gap-4 md:gap-6 lg:gap-10 xl:gap-14 max-w-7xl my-10 px-2">
-            <div id="menu" class="bg-white/10 col-span-3 rounded-lg p-4 ">
+<body class="antialiased bg-black w-full  text-slate-300">
+    <div class="antialiased bg-black w-full  text-slate-300 ">
+        <div class="grid grid-cols-12 gap-1 mx-auto  ">
+
+            <div id="menu" class="bg-zinc-900 col-span-2 p-4 h-screen sticky top-0">
                 <h1
-                    class="font-medium text-lg lg:text-3xl bg-gradient-to-br from-white via-white/50 to-transparent bg-clip-text text-transparent">
+                    class="font-medium text-md bg-gradient-to-br from-white via-white/50 to-transparent bg-clip-text text-transparent select-none lg:text-2xl xl:text-3xl">
                     publisher<span class="text-lime-400">.office</span>
                 </h1>
                 <hr class="my-2 border-slate-700">
@@ -56,7 +57,7 @@
                                 <p class="text-slate-400 text-sm hidden md:block">Image Convert</p>
                             </div>
                             <div
-                                class="absolute -top-3 -right-3 md:top-0 md:right-0 px-2 py-1.5 rounded-full bg-lime-800 text-xs font-mono font-bold">
+                                class="absolute -top-3 -right-3 md:top-0 md:right-0 px-2 py-1.5 rounded-full bg-lime-400 text-xs font-mono font-bold text-black">
                                 23</div>
                         </div>
                     </a>
@@ -65,7 +66,8 @@
                 </div>
                 <p class="text-sm text-center text-gray-600">V 1.0.0 | &copy; 2023 Weslley Alves</p>
             </div>
-            <div id="content" class="bg-white/10 col-span-9 rounded-lg p-6">
+
+            <div id="content" class="bg-zinc-950 col-span-10 p-6 h-full ">
                 <div id="24h">
                     <h1 class="font-bold py-4 uppercase">Upload Images</h1>
                     <div id="stats" class="grid gird-cols-1 md:grid-cols-1 lg:grid-cols-1 gap-2">
@@ -82,15 +84,15 @@
 
                 <div id="last-users">
                     <h1 class="font-bold py-4 uppercase">IMAGES TO CONVERT</h1>
-                    <div class="overflow-x-auto">
+                    <div class="">
                         <table id="fileTable" class="w-full whitespace-nowrap cursor-default select-none">
-                            <thead class="bg-black/60 text-left text-sm font-thin">
-                                <th class="rounded-tl-lg rounded-bl-none w-28"></th>
-                                <th class="py-1 w-96">File Name</th>
+                            <thead class="text-left text-sm font-thin ">
+                                <th class="rounded-tl-lg rounded-bl-none w-28 "></th>
+                                <th class="py-1 w-96 ">File Name</th>
                                 <th class="py-1 ">Size</th>
                                 <th class="py-1 ">Dimension</th>
                                 <th class="py-1 ">Format</th>
-                                <th class="py-1 rounded-tr-lg rounded-br-none">Actions</th>
+                                <th class="py-1  rounded-tr-lg rounded-br-none">Actions</th>
                             </thead>
                             <tbody id="fileList" class="select-none mt-3 pt-4"></tbody>
                             <!--tr class="border-b border-gray-700">
@@ -118,6 +120,7 @@
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
 </body>
